modification du html partie loisir

--- a/P2_remou_amed.html
+++ b/P2_remou_amed.html
@@ -187,14 +187,16 @@
 					</div>
 				</div> 
 			</div>
-			<div class="gauche 2">
-				<h2>LOISIRS</h2>
-				<div id="center">
-					<div class="cercle"><i class="fas fa-basketball-ball fa-2x" style="color:#263238;"></i></div>
-					<div class="cercle"><i class="fas fa-futbol fa-2x" style="color:#263238;"></i></div>
-					<div class="cercle"><i class="fas fa-laptop fa-2x" style="color:#263238;"></i></div>
+			<section  class="position">
+				<div>
+					<h2 class="color">LOISIRS</h2>
+						<div id="center" id="loisirs">
+							<div class="cercle"><i class="fas fa-basketball-ball"></i></div>
+							<div class="cercle"><i class="fas fa-futbol"></i></div>
+							<div class="cercle"><i class="fas fa-laptop"></i></div>
+						</div>
 				</div>
-			</div>
+			</section>
 		</section>
 	</main>
 	</div>
