modification de la sémantique du html

--- a/P2_remou_amed.html
+++ b/P2_remou_amed.html
@@ -7,186 +7,206 @@
 	<title></title>
 </head>
 <body>
-	<div id="bloc_page">
-	<header class="partie">
-		<div class="droite 1">
-			<h1><strong>REMOU</strong> AMED IBRAHIM</h1>										<!--  !-->
-			<h2><em>Dével</em>oppeur web junior</h2>
-		</div>
-		<div class="gauche 2">
-			<div id="image"><img src="./image/IMG_4639.JPG" alt="photo d'identité"></div>
-		</div>
-	</header>
+	<div id="bloc_page">									<!-- l'en tête de la page </!-->
+		<header>															
+			<div class="droite">
+				<h1><strong class="color">REMOU</strong> AMED IBRAHIM</h1>
+				<h2><em>Dével</em>oppeur web junior</h2>
+			</div>
+			<div class="gauche">
+				<div id="image"><img src="image/IMG_4639.JPG" alt="photo d'identité"></div>
+			</div>
+		</header>
 	<main>
-		<section class="partie">
-			<div class="droite 1">
-				<div class="aligne">
-					<div>
-						<i class="fas fa-graduation-cap fa-3x" style="color:#64B5F6;"></i>
-					</div>
-					<h2>FORMATION</h2>
-				</div>
-				<div class="aligne3">
-					<div class="point">
-						<div class="placer">
-							<i class="far fa-dot-circle fa-lg" style="color:#64B5F6;"></i>
-						</div>
-						<div class="bien">
-							<p>Mars 2020 - Decembre</br>Pau</p>
-						</div>
-					</div>
-						<div class="bloc">
-							<h3>OPENCLASSROOMS</h3>
-							<p>Developper Web Junior</p>
-							<p>Le développeur web est indispensable dans une équipe de développement. L'informatique n'a aucun secret pour lui et il a pour mission de donner vie aux maquettes visuelles d'un site ou d’une application web.</p>
-						</div>
-				</div>
-				<div class="aligne3">
-					<div class="point">
-						<div class="placer">
-							<i class="fas fa-circle fa-xs" style="color:#64B5F6;"></i>
-						</div>
-						<div class="bien">
-							<p>Septembre 2016-Juin 2018</br>Pau</p>
-						</div>
-					</div>
-						<div class="bloc">
-							<h3>Université de Pau et de pays de l'Adour</h3>
-							<p>Licence Informatique</p>
-							<p>Cette licence forme les étudiants à la conception, la programmation et à la maîtrise des matériels et logiciels. Les différents modules permettent aux étudiants d’acquérir les connaissances théoriques dans les différents domaines.</p>
-						</div>
-				</div>
-				<div class="aligne3">
-					<div class="point">
-						<div class="placer">
-							<i class="fas fa-circle fa-xs" style="color:#64B5F6;"></i>
-						</div>
-						<div class="bien">
-							<p>Septembre 2015-Juin 2016</br>La Réunion</p>
-						</div>
-					</div>
-					<div class="bloc">
-						<h3>PACES Première Année Commune aux Études de Santé</h3>
-						<p>Licence</p>
-						<p>Le portail de la première année commune aux études de santé (PACES) a pour objectifs d’une part, l’acquisition d’un socle commun de connaissances sur une approche très large de la santé avec des domaines variés et d’autre part, l’ouverture sur une finalité professionnelle avec les enseignements spécifiques à chacune des filières.</p>
-					</div>
-				</div>
-				
-				<div class="aligne3">
-					<div class="point">
-						<div class="placer">
-							<i class="fas fa-circle fa-xs" style="color:#64B5F6;"></i>
-						</div>
-						<div class="bien">
-							<p>Septembre 2014-Juin 2015</br>Mayotte</p>
-						</div>
-					</div>
-					<div class="bloc">
-						<h3>BAC S</h3>
-						<p>Élèves</p>
-						<p>En France, le baccalauréat scientifique (abrégé en bac S) est l'une des trois filières de la voie générale du lycée. 
-						Sa première session a eu lieu en 1995, et la dernière aura lieu en 2020, date après laquelle les séries générales seront supprimées du fait de la réforme du baccalauréat général et technologique et du lycée.</p>
-					</div>
-				</div>
+															<!--  colone droite </!-->
 
+		<div class="droite">								<!-- formation </!-->
+				<section id="formation">
+					<div class="aligne">
+						<div class="color taille">
+							<i class="fas fa-graduation-cap"></i>
+						</div>
+						<h2>FORMATION</h2>
+					</div>
+					<article>
+						<div class="aligne3">
+							<div class="point">
+								<div class="placer color">
+									<i class="far fa-dot-circle"></i>
+								</div>
+								<div class="bien">
+									<p>Mars 2020 - Decembre</br>Pau</p>
+								</div>
+							</div>
+								<div class="bloc">
+									<h3>OPENCLASSROOMS</h3>
+									<p>Développeur Web</p>
+									<p>Le développeur web est indispensable dans une équipe de développement. L'informatique n'a aucun secret pour lui et il a pour mission de donner vie aux maquettes visuelles d'un site ou d’une application web.
+									</p>
+								</div>
+						</div>
+					</article>
+					<article>
+						<div class="aligne3">
+							<div class="point">
+								<div class="placer color dimention">
+									<i class="fas fa-circle"></i>
+								</div>
+								<div class="bien">
+									<p>Septembre 2016-Juin 2018</br>Pau</p>
+								</div>
+							</div>
+								<div class="bloc">
+									<h3>Université de Pau et de pays de l'Adour</h3>
+									<p>Licence Informatique</p>
+									<p>Cette licence forme les étudiants à la conception, la programmation et à la maîtrise des matériels et logiciels. Les différents modules permettent aux étudiants d’acquérir les connaissances théoriques dans les différents domaines.</p>
+								</div>
+						</div>
+					</article>
+					<article>
+						<div class="aligne3">
+							<div class="point">
+								<div class="placer color dimention">
+									<i class="fas fa-circle"></i>
+								</div>
+								<div class="bien">
+									<p>Septembre 2015-Juin 2016</br>La Réunion</p>
+								</div>
+							</div>
+							<div class="bloc">
+								<h3>PACES Première Année Commune aux Études de Santé</h3>
+								<p>Licence</p>
+								<p>Le portail de la première année commune aux études de santé (PACES) a pour objectifs d’une part, l’acquisition d’un socle commun de connaissances sur une approche très large de la santé avec des domaines variés et d’autre part, l’ouverture sur une finalité professionnelle avec les enseignements spécifiques à chacune des filières.</p>
+							</div>
+						</div>
+					</article>
+					<article>
+						<div class="aligne3">
+							<div class="point">
+								<div class="placer color dimention">
+									<i class="fas fa-circle"></i>
+								</div>
+								<div class="bien">
+									<p>Septembre 2014-Juin 2015</br>Mayotte</p>
+								</div>
+							</div>
+							<div class="bloc">
+								<h3>BAC S</h3>
+								<p>Élèves</p>
+								<p>En France, le baccalauréat scientifique (abrégé en bac S) est l'une des trois filières de la voie générale du lycée. 
+								Sa première session a eu lieu en 1995, et la dernière aura lieu en 2020, date après laquelle les séries générales seront supprimées du fait de la réforme du baccalauréat général et technologique et du lycée.</p>
+							</div>
+						</div>
+					</article>
+				</section>
+				<section id="experience">										<!-- éxpérience professionelle </!-->
+					<div class="aligne">
+						<div class="color taille">
+							<i class="fas fa-briefcase"></i>
+						</div>
+						<h2>EXPÉRIENCE PROFESSIONELLE</h2>
+					</div>
+					<article>
+						<div class="aligne3">
+							<div class="point">
+								<div class="placer color">
+									<i class="far fa-dot-circle"></i>
+								</div>
+								<div class="bien">
+									<p>Juin 2018-Poste actuel</br>Pau</p>
+								</div>
+							</div>
+							<div class="bloc">
+								<h3>Coursier Uber Eats</h3>
+								<p>Auto entrepreneur</p>
+								<p>L’activité de coursier est une activité commerciale en plein essor ! Le secteur a profité de l’arrivée des plateformes de livraison de repas : Deliveroo, Foodora, Ubereats, etc. Aujourd’hui, le nombre de coursiers indépendants est en croissance permanente.</p>
+							</div>
+						</div>
+					</article>
+					<article>
+						<div class="aligne3">
+							<div class="point">
+								<div class="placer color dimention">
+									<i class="fas fa-circle"></i>
+								</div>
+								<div class="bien">
+									<p>Janvier 2018-Juin 2018</br>Pau</p>
+								</div>
+							</div>
+							<div class="bloc">
+								<h3>Inventoriste chez Ivalis France</h3>
+								<p>Jobs étudiant</p>
+								<p>Le métier d'inventoriste consiste à réaliser des inventaires pour différentes structures en particulier dans le secteur de la grande distribution et des chaines de magasins spécialisés. Il s'agit donc de compter les différents articles d'un magasin.</p>
+							</div>
+						</div>
+					</article>
+					<article>
+						<div class="aligne3">
+							<div class="point display">
+								<div class="placer color dimention">
+									<i class="fas fa-circle "></i>
+								</div>
+								<div class="bien">
+									<p>Juillet 2018-Juillet 2018</br>Bayonne</p>
+								</div>
+							</div>
+							<div class="bloc">
+								<h3>Agent d'accueil au fêtes de Bayonne</h3>
+								<p>Jobs étudiant</p>
+								<p>Désormais très prisées, les équipes vouées à l'événementiel interviennent de manière ponctuelle ou pour des missions. Le rôle est d'accueillir les visiteurs, leur délivrer les accès et enfin les orienter font partie de leurs principales missions.</p>
+							</div>
+						</div>
+					</article>
+				</section>
+				<section id="recommantation">
+					<div class="aligne">
+						<div class="color taille">
+							<i class="fas fa-pen-alt"></i>
+						</div>
+						<h2>RECOMMANDATIONS</h2>
+					</div>
+					<article>
+						<div class="ligne"></div>
+							<div id="conteneur">
+								<div class="element">
+									<h4>GAUBIAC PASCAL</h4>
+									<p>Mentort</p>
+									<p>Téléphone : 0645982369</p>
+									<p>Email : gaubiac.pascal@gmail.com </p>
+								</div>
+							<div class="element">
+								<h4>MILLET SOPHIE</h4>
+								<p>professeur Université de pau et des pays de l'adour</p>
+								<p>Téléphone : 0698834567</p>
+								<p>Email : sophie.millet@univ-pau.fr</p>
+							</div>
+						</div>
+					</article> 	
+				</section>
+		</div>
 
-			</div>
-				<div class="gauche 2">
-					<h2>CONTACT</h2>
-					<div id="contact">
-						<p>Adresse</br>Pau, France</p>
-						<p>Téléphone</br>0768873263</p>
-						<p>Email</br>amedremou@gmail.com</p>
-						<p>Site web</br>www.remou-amed.fr</p>
-						<p>Skype</br>@remou_amed</p></p>
-					</div>
+																	<!--  colone gauche!--->
+		<div class="gauche">
+			<section  class="position">
+				<div>
+					<h2 class="color">CONTACT</h2>
+							<div id="contact">
+								<p>Adresse</br>Pau, France</p>
+								<p>Téléphone</br>0768873263</p>
+								<p>Email</br>amedremou@gmail.com</p>
+								<p>Site web</br>www.remou-amed.fr</p>
+								<p>Skype</br>@remou_amed</p></p>
+							</div>
 				</div>
-		</section>
-		<section class="partie">
-			<div class="droite 1">
-				<div class="aligne">
-					<div>
-						<i class="fas fa-briefcase fa-3x" style="color:#64B5F6;"></i>
-					</div>
-					<h2>EXPÉRIENCE PROFESSIONELLE</h2>
+			</section>
+			<section  class="position">															<!-- m'a presentation </!-->
+				<div>
+					<h2 class="color">À PROPOS DE MOI</h2>
+							<div id="moi">
+								<p>Né et ayant grandi à Mayotte, une île où l’informatique n’est pas omniprésente, j'ai cependant toujours été passionné par ce domaine. Motivé et conscienceux, je souhaiterais mettre mes compétences et mes qualités au sein de votre entreprise en tant que développeur web. Ma deuxième passion, le basket ball, m'a toujour permis de me dépasser. Mes expériences professionnelles, notamment celle en tant que coursier, m'ont permis de développer un sens de l'écoute.</p>
+							</div>
 				</div>
-				<div class="aligne3">
-					<div class="point">
-						<div class="placer">
-							<i class="far fa-dot-circle fa-lg" style="color:#64B5F6;"></i>
-						</div>
-						<div class="bien">
-							<p>Juin 2018-Poste actuel</br>Pau</p>
-						</div>
-					</div>
-					<div class="bloc">
-						<h3>Coursier Uber Eats</h3>
-						<p>Auto entrepreneur</p>
-						<p>L’activité de coursier est une activité commerciale en plein essor ! Le secteur a profité de l’arrivée des plateformes de livraison de repas : Deliveroo, Foodora, Ubereats, etc. Aujourd’hui, le nombre de coursiers indépendants est en croissance permanente.</p>
-					</div>
-				</div>
-				<div class="aligne3">
-					<div class="point">
-						<div class="placer">
-							<i class="fas fa-circle fa-xs" style="color:#64B5F6;"></i>
-						</div>
-						<div class="bien">
-							<p>Janvier 2018-Juin 2018</br>Pau</p>
-						</div>
-					</div>
-					<div class="bloc">
-						<h3>Inventoriste chez Ivalis France</h3>
-						<p>Jobs étudiant</p>
-						<p>Le métier d'inventoriste consiste à réaliser des inventaires pour différentes structures en particulier dans le secteur de la grande distribution et des chaines de magasins spécialisés. Il s'agit donc de compter les différents articles d'un magasin.</p>
-					</div>
-				</div>
-				<div class="aligne3">
-					<div class="point">
-						<div class="placer">
-							<i class="fas fa-circle fa-xs" style="color:#64B5F6;"></i>
-						</div>
-						<div class="bien">
-							<p>Juillet 2018-Juillet 2018</br>Bayonne</p>
-						</div>
-					</div>
-					<div class="bloc">
-						<h3>Agent d'accueil au fêtes de Bayonne</h3>
-						<p>Jobs étudiant</p>
-						<p>Désormais très prisées, les équipes vouées à l'événementiel interviennent de manière ponctuelle ou pour des missions. Le rôle est d'accueillir les visiteurs, leur délivrer les accès et enfin les orienter font partie de leurs principales missions.</p>
-					</div>
-				</div>
-			</div>
-			<div class="gauche 2">
-				<h2>À PROPOS DE MOI</h2>
-					<div id="moi">
-						<p>Né et ayant grandi à Mayotte, une île où l’informatique n’est pas omniprésente, j'ai cependant toujours été passionné par ce domaine. Motivé et conscienceux, je souhaiterais mettre mes compétences et mes qualités au sein de votre entreprise en tant que développeur web. Ma deuxième passion, le basket ball, m'a toujour permis de me dépasser. Mes expériences professionnelles, notamment celle en tant que coursier, m'ont permis de développer un sens de l'écoute.</p>
-					</div>
-			</div>
-		</section>
-		<section class="partie">
-			<div class="droite 1">
-				<div class="aligne">
-					<div>
-						<i class="fas fa-pen-alt fa-3x" style="color:#64B5F6;"></i>
-					</div>
-					<h2>RECOMMANDATIONS</h2>
-				</div>
-				<div class="ligne"></div>
-					<div id="conteneur">
-						<div class="element">
-							<h4>GAUBIAC PASCAL</h4>
-							<p>Mentort</p>
-							<p>Téléphone : 0645982369</p>
-							<p>Email : gaubiac.pascal@gmail.com </p>
-						</div>
-					<div class="element">
-						<h4>MILLET SOPHIE</h4>
-						<p>professeur Université de pau et des pays de l'adour</p>
-						<p>Téléphone : 0698834567</p>
-						<p>Email : sophie.millet@univ-pau.fr</p>
-					</div>
-				</div> 
-			</div>
+			</section>
 			<section  class="position">
 				<div>
 					<h2 class="color">LOISIRS</h2>
@@ -197,7 +217,7 @@
 						</div>
 				</div>
 			</section>
-		</section>
+		</div>
 	</main>
 	</div>
 </body>
