modification html faute d'orthographe

--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
 								</div>
 							<div class="element">
 								<h4>MILLET SOPHIE</h4>
-								<p>professeur Université de pau et des pays de l'adour</p>
+								<p>professeure Université de pau et des pays de l'adour</p>
 								<p>Téléphone : 0698834567</p>
 								<p>Email : sophie.millet@univ-pau.fr</p>
 							</div>
@@ -203,7 +203,7 @@
 				<div>
 					<h2 class="color">À PROPOS DE MOI</h2>
 							<div id="moi">
-								<p>Né et ayant grandi à Mayotte, une île où l’informatique n’est pas omniprésente, j'ai cependant toujours été passionné par ce domaine. Motivé et conscienceux, je souhaiterais mettre mes compétences et mes qualités au sein de votre entreprise en tant que développeur web. Ma deuxième passion, le basket ball, m'a toujour permis de me dépasser. Mes expériences professionnelles, notamment celle en tant que coursier, m'ont permis de développer un sens de l'écoute.</p>
+								<p>Né et ayant grandi à Mayotte, une île où l’informatique n’est pas omniprésente, j'ai cependant toujours été passionné par ce domaine. Motivé et consciencieux, je souhaiterais mettre mes compétences et mes qualités au sein de votre entreprise en tant que développeur web. Ma deuxième passion, le basket ball, m'a toujours permis de me dépasser. Mes expériences professionnelles, notamment celle en tant que coursier, m'ont permis de développer un sens de l'écoute.</p>
 							</div>
 				</div>
 			</section>
