modificaton du titre

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8"/>
 	<link rel="stylesheet" type="text/css" href="P2_remou_amed.css">
 	<script src="https://kit.fontawesome.com/af8ff5d339.js" crossorigin="anonymous"></script>
-	<title></title>
+	<title>Remou-Amed</title>
 </head>
 <body>
 	<div id="bloc_page">									<!-- l'en tête de la page </!-->
