modification du html

--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
 <head>
 	<meta charset="utf-8"/>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" type="text/css" href="P2_remou_amed.css">
 	<script src="https://kit.fontawesome.com/af8ff5d339.js" crossorigin="anonymous"></script>
 	<title>Remou-Amed</title>
@@ -35,7 +36,7 @@
 									<i class="far fa-dot-circle"></i>
 								</div>
 								<div class="bien">
-									<p>Mars 2020 - Decembre</br>Pau</p>
+									<p>Mars 2020 - Decembre<br>Pau</p>
 								</div>
 							</div>
 								<div class="bloc">
@@ -53,7 +54,7 @@
 									<i class="fas fa-circle"></i>
 								</div>
 								<div class="bien">
-									<p>Septembre 2016-Juin 2018</br>Pau</p>
+									<p>Septembre 2016-Juin 2018<br>Pau</p>
 								</div>
 							</div>
 								<div class="bloc">
@@ -70,7 +71,7 @@
 									<i class="fas fa-circle"></i>
 								</div>
 								<div class="bien">
-									<p>Septembre 2015-Juin 2016</br>La Réunion</p>
+									<p>Septembre 2015-Juin 2016<br>La Réunion</p>
 								</div>
 							</div>
 							<div class="bloc">
@@ -87,7 +88,7 @@
 									<i class="fas fa-circle"></i>
 								</div>
 								<div class="bien">
-									<p>Septembre 2014-Juin 2015</br>Mayotte</p>
+									<p>Septembre 2014-Juin 2015<br>Mayotte</p>
 								</div>
 							</div>
 							<div class="bloc">
@@ -113,7 +114,7 @@
 									<i class="far fa-dot-circle"></i>
 								</div>
 								<div class="bien">
-									<p>Juin 2018-Poste actuel</br>Pau</p>
+									<p>Juin 2018-Poste actuel<br>Pau</p>
 								</div>
 							</div>
 							<div class="bloc">
@@ -130,7 +131,7 @@
 									<i class="fas fa-circle"></i>
 								</div>
 								<div class="bien">
-									<p>Janvier 2018-Juin 2018</br>Pau</p>
+									<p>Janvier 2018-Juin 2018<br>Pau</p>
 								</div>
 							</div>
 							<div class="bloc">
@@ -147,7 +148,7 @@
 									<i class="fas fa-circle "></i>
 								</div>
 								<div class="bien">
-									<p>Juillet 2018-Juillet 2018</br>Bayonne</p>
+									<p>Juillet 2018-Juillet 2018<br>Bayonne</p>
 								</div>
 							</div>
 							<div class="bloc">
@@ -185,17 +186,17 @@
 				</section>
 		</div>
 
-																	<!--  colone gauche!--->
+																	<!--  colone gauche </!-->
 		<div class="gauche">
 			<section  class="position">
 				<div>
 					<h2 class="color">CONTACT</h2>
 							<div id="contact">
-								<p>Adresse</br>Pau, France</p>
-								<p>Téléphone</br>0768873263</p>
-								<p>Email</br>amedremou@gmail.com</p>
-								<p>Site web</br>www.remou-amed.fr</p>
-								<p>Skype</br>@remou_amed</p></p>
+								<p>Adresse<br>Pau, France</p>
+								<p>Téléphone<br>0768873263</p>
+								<p>Email<br>amedremou@gmail.com</p>
+								<p>Site web<br>www.remou-amed.fr</p>
+								<p>Skype<br>@remou_amed</p>
 							</div>
 				</div>
 			</section>
@@ -210,7 +211,7 @@
 			<section  class="position">
 				<div>
 					<h2 class="color">LOISIRS</h2>
-						<div id="center" id="loisirs">
+						<div id="center">
 							<div class="cercle"><i class="fas fa-basketball-ball"></i></div>
 							<div class="cercle"><i class="fas fa-futbol"></i></div>
 							<div class="cercle"><i class="fas fa-laptop"></i></div>
